--- a/src/_includes/styles/ui.css
+++ b/src/_includes/styles/ui.css
@@ -27,7 +27,6 @@ Version 1.0-rc2
   text-wrap: nowrap;
   overflow-x: auto;
   white-space: nowrap;
-  min-width: 500px;
 }
 
 .navigator-nav a {
